[gd_scene load_steps=50 format=3 uid="uid://i18myxiswp6c"]

[ext_resource type="Script" path="res://scenes/slime.gd" id="1_3q008"]
[ext_resource type="Texture2D" uid="uid://qcipw4u341lj" path="res://assets/sprites/enemies/Green Slime.png" id="1_ievx7"]
[ext_resource type="Script" path="res://scripts/Hitbox.gd" id="2_4nqb6"]
[ext_resource type="Script" path="res://scripts/Hurtbox.gd" id="3_2ybbm"]
[ext_resource type="Texture2D" uid="uid://wkpw0cmwa40g" path="res://assets/sprites/interface/healthbar_4hp.png" id="5_kkrf7"]
[ext_resource type="Texture2D" uid="uid://dlhgyyvbwxj7r" path="res://assets/sprites/Shadow.png" id="6_oklnm"]
[ext_resource type="Texture2D" uid="uid://ctvcage1syo4i" path="res://assets/sprites/interface/lifebar_4hp_alt.png" id="6_qt0j7"]
[ext_resource type="AudioStream" uid="uid://cgj1t2p8yrs0x" path="res://assets/sounds/10_Battle_SFX/77_flesh_02.wav" id="8_epxbu"]

[sub_resource type="AtlasTexture" id="AtlasTexture_1m1pa"]
atlas = ExtResource("1_ievx7")
region = Rect2(0, 48, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_865hc"]
atlas = ExtResource("1_ievx7")
region = Rect2(48, 48, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_tqqvr"]
atlas = ExtResource("1_ievx7")
region = Rect2(96, 48, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_p1r6v"]
atlas = ExtResource("1_ievx7")
region = Rect2(144, 48, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_ggi1m"]
atlas = ExtResource("1_ievx7")
region = Rect2(192, 48, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_ocmue"]
atlas = ExtResource("1_ievx7")
region = Rect2(240, 48, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_g8n3b"]
atlas = ExtResource("1_ievx7")
region = Rect2(288, 48, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_7jgaq"]
atlas = ExtResource("1_ievx7")
region = Rect2(336, 48, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_fmanu"]
atlas = ExtResource("1_ievx7")
region = Rect2(0, 96, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_1c111"]
atlas = ExtResource("1_ievx7")
region = Rect2(48, 96, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_mpkfs"]
atlas = ExtResource("1_ievx7")
region = Rect2(96, 96, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_vkxc2"]
atlas = ExtResource("1_ievx7")
region = Rect2(144, 96, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_2ylr1"]
atlas = ExtResource("1_ievx7")
region = Rect2(192, 96, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_rhtif"]
atlas = ExtResource("1_ievx7")
region = Rect2(0, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_pd8xu"]
atlas = ExtResource("1_ievx7")
region = Rect2(48, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_0gbyr"]
atlas = ExtResource("1_ievx7")
region = Rect2(96, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_y3cud"]
atlas = ExtResource("1_ievx7")
region = Rect2(144, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_fj1r6"]
atlas = ExtResource("1_ievx7")
region = Rect2(192, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_v8lwo"]
atlas = ExtResource("1_ievx7")
region = Rect2(240, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_ub8sc"]
atlas = ExtResource("1_ievx7")
region = Rect2(288, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_lmos2"]
atlas = ExtResource("1_ievx7")
region = Rect2(336, 0, 48, 48)

[sub_resource type="SpriteFrames" id="SpriteFrames_jyt8v"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_1m1pa")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_865hc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tqqvr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_p1r6v")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ggi1m")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ocmue")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_g8n3b")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7jgaq")
}],
"loop": false,
"name": &"damage",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_fmanu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1c111")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mpkfs")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vkxc2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2ylr1")
}],
"loop": false,
"name": &"death",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_rhtif")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pd8xu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0gbyr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_y3cud")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fj1r6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_v8lwo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ub8sc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lmos2")
}],
"loop": false,
"name": &"default",
"speed": 10.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_ayddb"]
radius = 4.0
height = 12.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_v3v8b"]
radius = 4.0
height = 12.0

[sub_resource type="AtlasTexture" id="AtlasTexture_nf6hg"]
atlas = ExtResource("5_kkrf7")
region = Rect2(0, 24, 34, 6)

[sub_resource type="AtlasTexture" id="AtlasTexture_upokb"]
atlas = ExtResource("5_kkrf7")
region = Rect2(0, 18, 34, 6)

[sub_resource type="AtlasTexture" id="AtlasTexture_1btva"]
atlas = ExtResource("5_kkrf7")
region = Rect2(0, 12, 34, 6)

[sub_resource type="AtlasTexture" id="AtlasTexture_465at"]
atlas = ExtResource("5_kkrf7")
region = Rect2(0, 6, 34, 6)

[sub_resource type="AtlasTexture" id="AtlasTexture_5ok40"]
atlas = ExtResource("5_kkrf7")
region = Rect2(0, 0, 34, 6)

[sub_resource type="SpriteFrames" id="SpriteFrames_8hpnm"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_nf6hg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_upokb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1btva")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_465at")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5ok40")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_8hm64"]
atlas = ExtResource("6_qt0j7")
region = Rect2(0, 24, 34, 6)

[sub_resource type="AtlasTexture" id="AtlasTexture_33fuo"]
atlas = ExtResource("6_qt0j7")
region = Rect2(0, 18, 34, 6)

[sub_resource type="AtlasTexture" id="AtlasTexture_s74vo"]
atlas = ExtResource("6_qt0j7")
region = Rect2(0, 12, 34, 6)

[sub_resource type="AtlasTexture" id="AtlasTexture_6nw5c"]
atlas = ExtResource("6_qt0j7")
region = Rect2(0, 6, 34, 6)

[sub_resource type="AtlasTexture" id="AtlasTexture_cbjxn"]
atlas = ExtResource("6_qt0j7")
region = Rect2(0, 0, 34, 6)

[sub_resource type="SpriteFrames" id="SpriteFrames_u6tlv"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_8hm64")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_33fuo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_s74vo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6nw5c")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cbjxn")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="Animation" id="Animation_7ilby"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("SlimeSprite:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"death"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("SlimeSprite:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:speed")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [50]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Hitbox/Hitbox_Shape:disabled")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Hurtbox/Hurtbox_Shape:disabled")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath(".:is_hurt")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath(".:modulate")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_m06v4"]
resource_name = "damage"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("SlimeSprite:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"damage"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("SlimeSprite:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:speed")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [0, 50]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = false
tracks/3/path = NodePath("Hitbox/Hitbox_Shape:disabled")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = false
tracks/4/path = NodePath("Hurtbox/Hurtbox_Shape:disabled")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath(".:is_hurt")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0.0333333, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}

[sub_resource type="Animation" id="Animation_ybnpn"]
resource_name = "death"
length = 0.9
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("SlimeSprite:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"death"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("SlimeSprite:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:speed")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Hitbox/Hitbox_Shape:disabled")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Hurtbox/Hurtbox_Shape:disabled")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath(".:is_hurt")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath(".:modulate")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0.3, 0.9),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_3dsk4"]
resource_name = "default"
length = 0.8
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("SlimeSprite:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"default"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("SlimeSprite:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_80kol"]
_data = {
"RESET": SubResource("Animation_7ilby"),
"damage": SubResource("Animation_m06v4"),
"death": SubResource("Animation_ybnpn"),
"default": SubResource("Animation_3dsk4")
}

[node name="Slime" type="Area2D"]
texture_filter = 1
texture_repeat = 1
scale = Vector2(5, 5)
script = ExtResource("1_3q008")

[node name="SlimeSprite" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_jyt8v")
animation = &"death"

[node name="Hitbox" type="Area2D" parent="."]
light_mask = 0
visibility_layer = 2
script = ExtResource("2_4nqb6")
damage = 1

[node name="Hitbox_Shape" type="CollisionShape2D" parent="Hitbox"]
position = Vector2(0, 0.8)
rotation = 1.5708
shape = SubResource("CapsuleShape2D_ayddb")

[node name="Hurtbox" type="Area2D" parent="."]
light_mask = 2
visibility_layer = 0
script = ExtResource("3_2ybbm")

[node name="Hurtbox_Shape" type="CollisionShape2D" parent="Hurtbox"]
position = Vector2(0, 0.8)
rotation = 1.5708
shape = SubResource("CapsuleShape2D_v3v8b")

[node name="Healthbar_red" type="AnimatedSprite2D" parent="."]
position = Vector2(0, -10)
scale = Vector2(0.4, 0.4)
sprite_frames = SubResource("SpriteFrames_8hpnm")

[node name="Healthbar_trans" type="AnimatedSprite2D" parent="."]
position = Vector2(0, -10)
scale = Vector2(0.4, 0.4)
sprite_frames = SubResource("SpriteFrames_u6tlv")

[node name="Shadow" type="Sprite2D" parent="."]
z_index = -1
position = Vector2(0, 4.8)
texture = ExtResource("6_oklnm")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_80kol")
}

[node name="Timer" type="Timer" parent="."]

[node name="hurt_vfx" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("8_epxbu")

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
